--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,6 +1,6 @@
 PORT = 8000
 FONTEND_URL= localhost:5173
-URL = "http://localhost:8000"
+URL = "https://erp-project-backend-jqan.onrender.com"
 
 DB = "mongodb+srv://pantha:pantha@cluster0.enrf8sb.mongodb.net/"
 
